@startuml
'https://plantuml.com/class-diagram

'___________STYLES___________
title UML - Supermercado
skinparam classAttributeIconSize 0
skinparam backgroundColor White
skinparam RoundCorner 10
skinparam Shadowing true

skinparam class {
    ArrowColor Black
    BackgroundColor White
    HeaderBackgroundColor Gray
    BorderColor Black
    FontColor White
    FontSize 14
    AttributeFontSize 12
}

skinparam object{
    ArrowColor Black
    BackgroundColor White
    BorderColor Black
    FontColor Black
    FontSize 14
    AttributeFontSize 12
}

skinparam note {
    BackgroundColor LightYellow
    BorderColor Black
}

'___________UML___________

object Cliente{
}

interface ICalculoDescuento{
+calcularDescuento(Tarjeta tarjeta, Producto producto, int cantidad): int
}

class CalculoDescuento{
apiCantidad: APICantidad
apiProducto: APIProducto
apiTarjeta: APITarjeta
+calcularDescuento(Tarjeta tarjeta, Producto producto, int cantidad): int
}

class APICantidad{
calcularDescuento(int cantidad): int
}

class APIProducto{
calcularDescuento(Producto producto): int
}

class APITarjeta{
calcularDescuento(Tarjeta tarjeta): int
}

class Producto{
-nombre: String
-tipo: String
+Producto(String nombre, String tipo)
+getNombre(): String
+setNombre()
+getTipo(): String
+setTipo()
+toString()
}

class Tarjeta{
-número: String
-banco: String
+Tarjeta(String número, String banco)
+getNúmero(): String
+setNúmero()
+getBanco(): String
+setBanco()
+toString()
}

Cliente -> ICalculoDescuento
ICalculoDescuento <|.. CalculoDescuento
CalculoDescuento --> APITarjeta
CalculoDescuento --> APIProducto
CalculoDescuento --> APICantidad
APIProducto ..> Producto
APITarjeta ..> Tarjeta

@enduml